pkgs/artifacts/tests/tui/snapshots/tests__tui__view_tests__model_tests__enter_opens_prompt_screen.snap
---
source: tests/tui/view_tests.rs
expression: StateCaptures(captures).to_string()
---
Step 0:
Message: Key(KeyEvent { code: Enter, modifiers: KeyModifiers(0x0) })

Model:
ModelState {
    screen: "ArtifactList",
    selected_index: 0,
    selected_log_step: "Check",
    active_prompt: None,
    artifacts: [
        ArtifactState {
            target: "machine-one",
            name: "ssh-key",
            status: "NeedsGeneration",
            target_type: "nixos",
        },
        ArtifactState {
            target: "machine-two",
            name: "api-token",
            status: "UpToDate",
            target_type: "nixos",
        },
        ArtifactState {
            target: "user@host",
            name: "gpg-key",
            status: "NeedsGeneration",
            target_type: "homemanager",
        },
    ],
    error: None,
    warnings_count: 0,
}

Rendered:
"┌Artifacts (3)─────────────────────────┐Prompt: ssh-key [1/1]                   "
"│> ✎ [N] machine-one/ssh-key Awaiting i│                                        "
"│  ✓ [N] machine-two/api-token         │────────────────────────────────────────"
"│  ◐ [H] user@host/gpg-key             │Field: passphrase                       "
"│                                      │Enter the passphrase value              "
"│                                      │                                        "
"│                                      │                                        "
"│                                      │┌Input [line]──────────────────────────┐"
"│                                      ││> █                                   │"
"│                                      │└──────────────────────────────────────┘"
"│                                      │Tab: change mode | Enter: submit | Esc: "
"│                                      │                                        "
"│                                      │                                        "
"│                                      │                                        "
"│                                      │                                        "
"│                                      │                                        "
"│                                      │                                        "
"│                                      │                                        "
"│                                      │                                        "
"│                                      │                                        "
"│                                      │                                        "
"└──────────────────────────────────────┘                                        "
"j/k:nav  Enter:gen  a:all  l:log  Esc Es                                        "
"○ Pend ◐ Need ✎ Input ✓ OK ✗ Fail ⊘ Canc                                        "
