pkgs/artifacts/tests/tui/snapshots/tests__tui__view_tests__model_tests__navigate_down_updates_selection.snap
---
source: tests/tui/view_tests.rs
expression: StateCaptures(captures).to_string()
---
Step 0:
Message: Key(KeyEvent { code: Char('j'), modifiers: KeyModifiers(0x0) })

Model:
ModelState {
    screen: "ArtifactList",
    selected_index: 0,
    selected_log_step: "Check",
    active_prompt: None,
    artifacts: [
        ArtifactState {
            target: "machine-one",
            name: "ssh-key",
            status: "Pending",
            target_type: "nixos",
        },
        ArtifactState {
            target: "machine-two",
            name: "api-token",
            status: "UpToDate",
            target_type: "nixos",
        },
        ArtifactState {
            target: "user@host",
            name: "gpg-key",
            status: "NeedsGeneration",
            target_type: "homemanager",
        },
    ],
    error: None,
    warnings_count: 0,
}

Rendered:
"┌Artifacts (3) - j/k: move, Enter: gen,┐┌Logs: machine-two/api-token───────────┐"
"│  ○ [N] machine-one/ssh-key           ││No logs yet. Generate this artifact to│"
"│> ✓ [N] machine-two/api-token         ││see output.                           │"
"│  ◐ [H] user@host/gpg-key             ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"└──────────────────────────────────────┘│                                      │"
"○ Pend ◐ Need ✎ Input ✓ OK ✗ Fail ⊘ Canc└──────────────────────────────────────┘"
