pkgs/artifacts/tests/tui/snapshots/tests__tui__view_tests__model_tests__status_pending_to_needs_generation.snap
---
source: tests/tui/view_tests.rs
expression: StateCaptures(captures).to_string()
---
Step 0:
Message: CheckSerializationResult { artifact_index: 0, status: NeedsGeneration, result: Ok(ScriptOutput { stdout_lines: [], stderr_lines: [] }) }

Model:
ModelState {
    screen: "ArtifactList",
    selected_index: 0,
    selected_log_step: "Check",
    active_prompt: None,
    artifacts: [
        ArtifactState {
            target: "machine-1",
            name: "artifact-1",
            status: "Pending",
            target_type: "nixos",
        },
    ],
    error: None,
    warnings_count: 0,
}

Rendered:
"┌Artifacts (1)─────────────────────────┐┌Logs: machine-1/artifact-1────────────┐"
"│> ◐ [N] machine-1/artifact-1          ││▼ Check                               │"
"│                                      ││  i Artifact needs regeneration       │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"└──────────────────────────────────────┘│                                      │"
"j/k:nav  Enter:gen  a:all  l:log  Esc Es│                                      │"
"○ Pend ◐ Need ✎ Input ✓ OK ✗ Fail ⊘ Canc└──────────────────────────────────────┘"
